# rust-guide

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
documents/: mars_rover.md
documents/resource/: crates.js  search-index.js  settings.html  source-files.js
documents/tasking/: grep.md  mars_rover.md  range.md
scripts/: check-all.sh  check-style.sh  check_all.sh  coverage.sh  doc.sh  lint_check.sh  run-demo.sh  try-fix.sh
scripts/ci/: check-all.sh
src/: lib.rs
src/day1/: break_with_numbers.rs  break_with_tags.rs  const_shadowing.rs  demo1hello_world.rs  demo2compare_number.rs  demo3type_change.rs  demo4guess_number.rs  demo5variable_readable.rs  demo6data_type.rs  for_loop.rs  given_value_block.rs  learn_if.rs  mod.rs  test.rs  while_loop.rs
src/day1practise/: christmas_song.rs  degree_convert.rs  fibonacci_number.rs  mod.rs  test.rs
src/day2/: clone.rs  deconstruction.rs  mod.rs  ownership_1.rs  ownership_2.rs  ownership_3.rs  ownership_4.rs  ownership_5.rs  references.rs  references_2.rs  references_3.rs  references_4.rs  slice_1.rs  slice_2.rs  string_class.rs
src/day3/: color.rs  copy_struct.rs  learn_init_struct.rs  learn_init_struct_2.rs  learn_init_struct_3.rs  learn_init_tuple_struct.rs  mod.rs  print_user.rs  struct_method.rs  user.rs
src/day4/: ip_address.rs  ip_address_kind.rs  ip_address_kind_v2.rs  learn_option.rs  learn_use_enum.rs  learn_use_enum_2.rs  mod.rs
src/day5/: coin.rs  if_let.rs  (+11 more)
tests/: day1.rs  day1practise.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  integration_test.rs
(+741 files in other folders)
