[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"
authors = ["Neil Wang <webmaster@neilwang.wiki>"]
license = "Apache-2.0"
license-file = "./LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[features]
default = []
